@@ -1,4 +1,4 @@
-package blooddonation;
+package blooddonation.Controller;
 
 import com.blooddonation.controller.DonationController;
 import com.blooddonation.model.Donation;
@@ -14,6 +14,7 @@ import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
 import java.time.LocalDate;
+import java.util.Collections;
 import java.util.List;
 
 import static org.mockito.Mockito.*;
@@ -30,72 +31,74 @@ class DonationControllerTest {
     @InjectMocks
     private DonationController donationController;
 
+    private Donation donation;
+
     @BeforeEach
     void setUp() {
         MockitoAnnotations.openMocks(this);
         mockMvc = MockMvcBuilders.standaloneSetup(donationController).build();
+
+        Donor donor = new Donor();
+        donor.setId(1L);
+        donation = new Donation(donor, LocalDate.now(), 500, "Nairobi Hospital", "A+");
     }
 
     @Test
     void createDonation_ShouldReturnCreatedDonation() throws Exception {
-        Donor donor = new Donor();
-        donor.setId(1L);
-
-        Donation donation = new Donation(donor, LocalDate.now(), 500, "Hospital A", "A+");
         when(donationService.saveDonation(any(Donation.class))).thenReturn(donation);
 
         mockMvc.perform(post("/api/donations")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("""
+                        .content(String.format("""
                                 {
                                     "donorId": 1,
-                                    "donationDate": "2024-02-28",
+                                    "donationDate": "%s",
                                     "quantity": 500,
-                                    "location": "Hospital A",
+                                    "location": "Nairobi Hospital",
                                     "bloodType": "A+"
                                 }
-                                """))
+                                """, donation.getDonationDate())))
                 .andExpect(status().isCreated())
                 .andExpect(jsonPath("$.donor.id").value(1))
                 .andExpect(jsonPath("$.bloodType").value("A+"));
+
+        verify(donationService, times(1)).saveDonation(any(Donation.class));
     }
 
     @Test
     void getDonation_ShouldReturnDonationById() throws Exception {
-        Donor donor = new Donor();
-        donor.setId(1L);
-
-        Donation donation = new Donation(donor, LocalDate.now(), 500, "Hospital A", "A+");
         when(donationService.getDonation(1L)).thenReturn(donation);
 
         mockMvc.perform(get("/api/donations/1"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.donor.id").value(1))
                 .andExpect(jsonPath("$.bloodType").value("A+"));
+
+        verify(donationService, times(1)).getDonation(1L);
     }
 
     @Test
     void updateDonation_ShouldReturnUpdatedDonation() throws Exception {
-        Donor donor = new Donor();
-        donor.setId(1L);
+        Donation updatedDonation = new Donation(donation.getDonor(), LocalDate.now(), 600, "Kenyatta Hospital", "A+");
 
-        Donation updatedDonation = new Donation(donor, LocalDate.now(), 600, "Hospital B", "O+");
         when(donationService.updateDonation(eq(1L), any(Donation.class))).thenReturn(updatedDonation);
 
         mockMvc.perform(put("/api/donations/1")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content("""
+                        .content(String.format("""
                                 {
                                     "donorId": 1,
-                                    "donationDate": "2024-02-28",
+                                    "donationDate": "%s",
                                     "quantity": 600,
-                                    "location": "Hospital B",
-                                    "bloodType": "O+"
+                                    "location": "Kenyatta Hospital",
+                                    "bloodType": "A+"
                                 }
-                                """))
+                                """, updatedDonation.getDonationDate())))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.donor.id").value(1))
-                .andExpect(jsonPath("$.bloodType").value("O+"));
+                .andExpect(jsonPath("$.bloodType").value("A+"));
+
+        verify(donationService, times(1)).updateDonation(eq(1L), any(Donation.class));
     }
 
     @Test
@@ -104,19 +107,40 @@ class DonationControllerTest {
 
         mockMvc.perform(delete("/api/donations/1"))
                 .andExpect(status().isNoContent());
+
+        verify(donationService, times(1)).deleteDonation(1L);
     }
 
     @Test
     void getDonationsByDonor_ShouldReturnDonationsForSpecificDonor() throws Exception {
-        Donor donor = new Donor();
-        donor.setId(1L);
-
-        List<Donation> donations = List.of(new Donation(donor, LocalDate.now(), 500, "Hospital A", "A+"));
+        List<Donation> donations = Collections.singletonList(donation);
         when(donationService.getDonationsByDonorId(1L)).thenReturn(donations);
 
         mockMvc.perform(get("/api/donations/donor/1"))
                 .andExpect(status().isOk())
+                .andExpect(jsonPath("$.size()").value(1))
                 .andExpect(jsonPath("$[0].donor.id").value(1))
                 .andExpect(jsonPath("$[0].bloodType").value("A+"));
+
+        verify(donationService, times(1)).getDonationsByDonorId(1L);
+    }
+
+    @Test
+    void getDonation_ShouldReturnNotFound_WhenDonationDoesNotExist() throws Exception {
+        when(donationService.getDonation(99L)).thenReturn(null);
+
+        mockMvc.perform(get("/api/donations/99"))
+                .andExpect(status().isNotFound());
+
+        verify(donationService, times(1)).getDonation(99L);
+    }
+
+    @Test
+    void testSearchDonations() throws Exception {
+        mockMvc.perform(get("/api/donations/search")
+                        .param("donorName", "John Doe")
+                        .param("donationDate", "2024-03-12")
+                        .param("bloodType", "A+"))
+                .andExpect(status().isOk());
     }
 }
